--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -253,10 +253,78 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p>d) Any other IN and OUT message directories used for interfaces</p>
 <p>e) User directories or BPs created by developers and the local source code in them for testing purposes</p>
 <h1 id="wealth-suite-golden--copy-pre-requisites">Wealth suite golden  copy pre-requisites</h1>
+<p>All the wealth templates have the ability to deploy the following components:</p>
+<p><img src="images/components-list.png" alt=""></p>
+<table>
+<thead>
+<tr>
+<th>Component description</th>
+<th>Can this be client specific</th>
+<th>How to change in extend env</th>
+<th>How to change in an assemble factory</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Tap-core</td>
+<td>Yes</td>
+<td>Client golden copy / ISB build must be  uploaded into artifactory and the respective template manifest file (i.e. components file) updated with artifactory path</td>
+<td>The client binary should be uploaded to the appropriate stream/stage folder in the artifactory. The exact location can be found in the TCD portal components configuration page. After creating components in the TCD portal, the upload URL will be populated automatically.</td>
+</tr>
+<tr>
+<td>OCS</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>OCS-Custom</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>TTI</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>TTI -L3</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>GWPack</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>GWPack-L3</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>Tap-Wsc</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+<tr>
+<td>Tap- GUI</td>
+<td>Yes</td>
+<td>Same as above</td>
+<td>Same as above</td>
+</tr>
+</tbody>
+</table>
 <h2 id="tap-core">TAP CORE</h2>
 <p>&nbsp; <strong>Database-generic</strong></p>
 <ul>
-<li><p>The golden copy of the TAP DB must be obtained  by doing an extract using the cloning tool (cloning tool version to be used should be the one delivered with Wealth distribution)</p>
+<li><p>The golden copy of the TAP DB must be obtained  by doing an extract using the cloning tool (the cloning tool version to be used should be the one delivered with Wealth distribution)</p>
 </li>
 <li><p>The golden copy of TAP database must be delivered with golden copy of TAP Core binaries (in sync)</p>
 </li>
@@ -275,22 +343,78 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </ul>
 <h2 id="gwpack---l3">GWPACK - L3</h2>
 <ul>
-<li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
+<li><p><strong>Important!</strong> The L3 GWPACK format must follow the structure below. Any mismatch in folder structure/folder/file name leads to non-processing of L3 deployment files.</p>
 </li>
-<li><p>There’s no L3 extraction mechanism provided by Product at this stage. Waiting for this product feature to be delivered, client must maintain L3 development in his repository mechanism, and publish packages to be testing in TCD</p>
+<li><p>There’s no L3 extraction mechanism provided by Product at this stage. Waiting for this product feature to be delivered, client must maintain L3 development in his repository mechanism, and publish packages to be testing in TCD.</p>
 </li>
-<li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
+<li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team.</p>
+<p><img src="images/gwpack-l3.png" alt=""></p>
+<p>This table explains what each folder and sub-folder from the above screenshot:</p>
 </li>
 </ul>
+<table>
+<thead>
+<tr>
+<th>File</th>
+<th>Details</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GWP\GWPACK.cfg</td>
+<td>Customization is required in the environment as part of L3 is listed in GWPACK.cfg file.</td>
+</tr>
+<tr>
+<td>GWP\ mrn.csv</td>
+<td>In this file, the WTX executable to be used has to be updated with the variable and value parameters ending with semicolon. It is updated for each line with semi colon separator in the CSV file (variable:value;).  Eg.:  GWPACK_ONLINE_IMPORT_OPTIM:-m -O -B100;</td>
+</tr>
+<tr>
+<td>Scripts\ XX_GWPACK_TTI_Att.sh</td>
+<td>This file contains shell scripts which will be executed on top of GWP L1 deployment and shell scripts execution sequence will be based on shell script name 01_{.<em>}.sh, 02_{.</em>}.sh   Eg.: 01_GWPACK_TTI_Att.sh 02_GWP_Config.sh</td>
+</tr>
+</tbody>
+</table>
 <h2 id="tti--l3">TTI -L3</h2>
 <ul>
-<li><p>L3 GWPACK format must suit exact format to be provided by Temenos </p>
+<li><p>The TTI L3 Package must follow the below format to follow a correct processing in the given environment. It is mandatory for the main folder to be a ZIP format.</p>
 </li>
 <li><p>There’s no L3 extraction mechanism provided by Product at this stage. Waiting for this product feature to be delivered, client must maintain L3 development in his repository mechanism, and publish packages to be testing in TCD</p>
 </li>
 <li><p>Distribution must come as a single full distribution (i.e. any update/hotfix must be delivered in TCD platform as a full release to be requested to Distribution team</p>
+<p><img src="images/tti-l3.png" alt=""></p>
+<p>See below the description for the above structure:</p>
 </li>
 </ul>
+<table>
+<thead>
+<tr>
+<th>Folder Path</th>
+<th>Explanation</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>BarFilesConfig Folder</td>
+<td>The bar file which needs to deployed in IIB should have corresponding bar properties file naming convention. Eg: TTI-T24-Jms.bar.properties1 temenos.tti.connectors.B2F_T24toIN#JMS Input.sourceQueueName=jms/queue/t24IFInboundQueue These properties would be overwritten in the Bar file and redeployed.</td>
+</tr>
+<tr>
+<td>BusConfig Folder</td>
+<td>This folder contains properties and configuration files of TTI deployment.</td>
+</tr>
+<tr>
+<td>Event&amp;Flows_jar folder</td>
+<td>This folder contains L3 updates for T24, specifically T24 DS. The L3 update is of jar type which will be compiled and published in T24 upon deployment. If there are no T24 updates, this folder can be left empty</td>
+</tr>
+<tr>
+<td>XSLT → CustomerType</td>
+<td>CustomerType folder can consists of xsl files which are present both in L3 package and in L1 deployment. This should be of format “FileName-Custo.xsl”</td>
+</tr>
+<tr>
+<td>XSLT → L3Newflow</td>
+<td>L3Newflow folder can consists of xsl files which are present only in L3 package and not in L1 deployment.</td>
+</tr>
+</tbody>
+</table>
 <h2 id="tap-web">TAP Web</h2>
 <ul>
 <li>TAP Web golden copy consists only on list of L1 updates (hotfixes) and L3 packages (TAP Web Design studio packages)  to be provided</li>
