--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -347,6 +347,8 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </ul>
 <div class="NOTE"><h5>Note</h5><p>If the respective product is attached to a factory, you will not be able to delete. You need to delete the factory first.</p>
 </div>
+<p> To see the details of a component please make sure to first select the stream from the top-right-side menu. The list with the components that belong to the respective stream will be displayed on the left side of the page. The same operation applies for the products:
+<img src="./images/components-see-details.png" alt=""></p>
 <h1 id="artifactory-view">Artifactory view</h1>
 <p>The artifactory view displays the uploaded components that are available for the particular stages. By expanding the components, the user triggers a download of the respective component zip file.</p>
 <p><img src="images/artifactory_view.png" alt=""></p>
